design and data changes, started adding components and logic for /papers route

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,9 +45,9 @@ body {
   font-display: swap;
 }
 
-.geom{
+/* .geom{
   font-family: "CM Geom", "sans-serif";
-}
+} */
 
 .line-gap{
   line-height: 120%;
