added types for ts type safety, edited styling a lil bit

--- a/src/components/MainContainer.module.css
+++ b/src/components/MainContainer.module.css
@@ -160,5 +160,5 @@
 
 .main_container {
   /* font-family: "Aspekta", "sans-serif"; */
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
 }
