Created custom tooltip component, added a mantras section, fixed component/UI inconsistencies, changed index route background

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,10 @@ html{
 .nav_radius{
   border-radius: 24px;
 }
+
+.index_bg{
+  background-image: url("/indigo.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-attachment: scroll;
+}
