--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,29 +3,29 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Satoshi-Variable';
-  src: url('./fonts/Satoshi-Variable.woff2') format('woff2'),
-       url('./fonts/Satoshi-Variable.woff') format('woff'),
-       url('./fonts/Satoshi-Variable.ttf') format('truetype');
-       font-weight: 300 900;
-       font-display: swap;
-       font-style: normal;
+  font-family: "Satoshi-Variable";
+  src: url("./fonts/Satoshi-Variable.woff2") format("woff2"),
+    url("./fonts/Satoshi-Variable.woff") format("woff"),
+    url("./fonts/Satoshi-Variable.ttf") format("truetype");
+  font-weight: 300 900;
+  font-display: swap;
+  font-style: normal;
 }
 
-html{
-  font-family: 'Satoshi', sans-serif;
+html {
+  font-family: "Satoshi-Variable", sans-serif;
   scroll-behavior: smooth !important;
 }
 
-.line-gap{
+.line-gap {
   line-height: 120%;
 }
 
-.nav_radius{
+.nav_radius {
   border-radius: 24px;
 }
 
-.index_bg{
+.index_bg {
   background-image: url("/indigo.png");
   background-repeat: no-repeat;
   background-size: contain;
