added meeting scheduling link to contact form component, changed font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 html {
-  font-family: "Satoshi-Variable", sans-serif;
+  /* font-family: "Satoshi-Variable", sans-serif; */
   scroll-behavior: smooth !important;
 }
 
