--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 
 @font-face {
   font-family: "Satoshi-Variable";
-  src: url("./fonts/Satoshi-Variable.woff2") format("woff2"),
-    url("./fonts/Satoshi-Variable.woff") format("woff"),
-    url("./fonts/Satoshi-Variable.ttf") format("truetype");
+  src: url("../fonts/Satoshi-Variable.woff2") format("woff2"),
+    url("../fonts/Satoshi-Variable.woff") format("woff"),
+    url("../fonts/Satoshi-Variable.ttf") format("truetype");
   font-weight: 300 900;
   font-display: swap;
   font-style: normal;
@@ -14,8 +14,8 @@
 
 @font-face {
   font-family: "Mattone";
-  src: url("./fonts/Mattone-150.woff2") format("woff2"),
-    url("./fonts/Mattone-150.woff") format("woff");
+  src: url("../fonts/Mattone-150.woff2") format("woff2"),
+    url("../fonts/Mattone-150.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
