Remove unused files and update FeaturedProjectItem and CurrentExp design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,6 +76,13 @@ html {
   background-attachment: scroll;
 }
 
+.featured_project_item{
+  background-image: url("/600.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+
 .markup_blog{
   h1, h2, h3, h4, h5, h6{
     @apply text-blue-500
