--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,10 +41,10 @@ html {
   border-radius: 24px;
 }
 
-.index_bg {
+.intro_bg {
   background-image: url("/indigo.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-attachment: scroll;
 }
 
